[tool.poetry]
name = "Sakai Grade Scraper"
version = "0.1.0"
description = ""
authors = ["Zachary Burk <zachburk7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.15.0"
SakaiPy = "^2.3.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
